--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/navermaps": "^3.6.1",
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.57.1"
