--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.18",
+    "@types/proj4": "^2.5.2",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
@@ -22,6 +23,7 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "next-redux-wrapper": "^8.1.0",
+    "proj4": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
